deploy/modules/security_groups/main.tf
resource "aws_security_group" "alb" {
  description = "ports on ALB"

  vpc_id = var.vpc_id
  name   = "ad-app"

  ingress {
    protocol    = "tcp"
    from_port   = 80
    to_port     = 80
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port = 0
    to_port   = 0
    protocol  = "-1"

    cidr_blocks = [
      "0.0.0.0/0",
    ]
  }
}

resource "aws_security_group" "instance" {
  description = "access to application instance"
  vpc_id = var.vpc_id
  name        = "application-instance"

  ingress {
    protocol    = "tcp"
    from_port   = 80
    to_port     = 80
    description = "Access from ALB"

    security_groups = [
      aws_security_group.alb.id,
    ]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
